[gd_scene load_steps=32 format=3 uid="uid://dgsb17wmfpqq0"]

[ext_resource type="Script" uid="uid://bte826katrmld" path="res://src/Characters/NPC/Ennemies/FireThrower/FireThrower.gd" id="1_irlix"]
[ext_resource type="Shader" uid="uid://dis4rpkeisnth" path="res://assets/shader/recolor.gdshader" id="3_nb4s5"]
[ext_resource type="Texture2D" uid="uid://66u5d77uha86" path="res://assets/art/characters/Pedestrian_1.png" id="4_0s2ev"]
[ext_resource type="Texture2D" uid="uid://yhnhpyvb7d70" path="res://assets/art/effects/exclamation_bubble.png" id="5_08ex5"]
[ext_resource type="Texture2D" uid="uid://bdkxpfm14ft1r" path="res://assets/art/effects/interrogation_bubble.png" id="6_d50wu"]
[ext_resource type="Script" uid="uid://03omjk1utll" path="res://src/Items/Balls/BallHolder.gd" id="7_bfato"]
[ext_resource type="Script" uid="uid://b4k5l1qt3nyhh" path="res://src/Characters/StateSystem/MultiStateMachine.gd" id="8_6t0f2"]
[ext_resource type="Script" uid="uid://nik6qj0ud6w2" path="res://src/Characters/NPC/Ennemies/FireThrower/Logic.gd" id="8_wpj8g"]
[ext_resource type="Script" uid="uid://b40fy2gd78y7k" path="res://src/Characters/NPC/Ennemies/FireThrower/Idle.gd" id="9_ooxju"]
[ext_resource type="Script" uid="uid://b1rhv6w7mjfdo" path="res://src/Items/Interactive/Selectable.gd" id="11_80r25"]
[ext_resource type="Script" uid="uid://b6lwajyypnuit" path="res://src/Characters/NPC/Ennemies/FireThrower/Passing.gd" id="11_w5p4d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ccph8"]
radius = 8.0
height = 62.0

[sub_resource type="Gradient" id="Gradient_fn8hc"]
colors = PackedColorArray(0, 0, 0, 1, 0.6, 0.209, 0.09, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ujphu"]
gradient = SubResource("Gradient_fn8hc")

[sub_resource type="Gradient" id="Gradient_l1ux5"]
offsets = PackedFloat32Array(0.226744, 0.55814, 1)
colors = PackedColorArray(0.459572, 0, 0.060987, 1, 0.877791, 0.455528, 0, 1, 1, 0.880833, 0.35, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5gid4"]
gradient = SubResource("Gradient_l1ux5")

[sub_resource type="Gradient" id="Gradient_a8ik4"]
offsets = PackedFloat32Array(0.30814, 1)
colors = PackedColorArray(0.2335, 0.085, 0.25, 1, 0.833354, 0.296176, 0.30214, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8rk3a"]
gradient = SubResource("Gradient_a8ik4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ul68"]
shader = ExtResource("3_nb4s5")
shader_parameter/grad_0 = SubResource("GradientTexture1D_ujphu")
shader_parameter/grad_1 = SubResource("GradientTexture1D_5gid4")
shader_parameter/grad_2 = SubResource("GradientTexture1D_8rk3a")

[sub_resource type="Animation" id="Animation_tsrlh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../SpriteExclamation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../SpriteExclamation:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../SpriteExclamation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, -32)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../SpriteExclamation:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_08ex5")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:skew")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_sbffs"]
resource_name = "exclamation"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../SpriteExclamation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../SpriteExclamation:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 1.4, 1.6),
"transitions": PackedFloat32Array(0.5, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../SpriteExclamation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.7, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(24, -36), Vector2(24, -34), Vector2(24, -36), Vector2(24, -34)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../SpriteExclamation:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_08ex5")]
}

[sub_resource type="Animation" id="Animation_qmipg"]
resource_name = "idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_edu05"]
resource_name = "interrogation"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../SpriteExclamation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../SpriteExclamation:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 1.4, 1.6),
"transitions": PackedFloat32Array(0.5, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../SpriteExclamation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.7, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(24, -36), Vector2(24, -34), Vector2(24, -36), Vector2(24, -34)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../SpriteExclamation:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_d50wu")]
}

[sub_resource type="Animation" id="Animation_o4y5e"]
resource_name = "passing"
length = 1.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../StateMachine/Passing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"passing"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(0.683021, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_gpr2a"]
resource_name = "walk"
length = 1.12
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56, 0.63, 0.7, 0.77, 0.84, 0.91, 0.98, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../StateMachine/Logic:can_go")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fq6sd"]
_data = {
&"RESET": SubResource("Animation_tsrlh"),
&"exclamation": SubResource("Animation_sbffs"),
&"idle": SubResource("Animation_qmipg"),
&"interrogation": SubResource("Animation_edu05"),
&"passing": SubResource("Animation_o4y5e"),
&"walk": SubResource("Animation_gpr2a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tcs1k"]
radius = 160.0

[sub_resource type="Animation" id="Animation_2n8eg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -22)]
}

[sub_resource type="Animation" id="Animation_0qsww"]
resource_name = "cycle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.56667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, -24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7lp3v"]
_data = {
&"RESET": SubResource("Animation_2n8eg"),
&"cycle": SubResource("Animation_0qsww")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4jimj"]
radius = 2.0

[node name="FireThrower" type="CharacterBody2D" node_paths=PackedStringArray("flipper", "holder", "spawning_timer")]
z_index = 130
z_as_relative = false
collision_mask = 518
script = ExtResource("1_irlix")
throw_speed = 450.0
flipper = NodePath("Flipper")
holder = NodePath("BallHolder")
spawning_timer = NodePath("SpawningTimer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_ccph8")

[node name="Flipper" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Flipper"]
material = SubResource("ShaderMaterial_0ul68")
position = Vector2(0, -1)
texture = ExtResource("4_0s2ev")
hframes = 16
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flipper/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_fq6sd")
}

[node name="PlayerDetector" type="Area2D" parent="Flipper"]
position = Vector2(120, -8)
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="Flipper/PlayerDetector"]
shape = SubResource("CircleShape2D_tcs1k")
debug_color = Color(1, 0.56, 0.56, 0.0901961)

[node name="SpriteExclamation" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, -32)
texture = ExtResource("5_08ex5")

[node name="BallHolder" type="Node2D" parent="."]
script = ExtResource("7_bfato")
max_ball = 3

[node name="BallPositioners" type="Marker2D" parent="."]
position = Vector2(0, -22)

[node name="PositionerAnimationPlayer" type="AnimationPlayer" parent="BallPositioners"]
libraries = {
"": SubResource("AnimationLibrary_7lp3v")
}
autoplay = "cycle"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("status_logic", "init_states")]
script = ExtResource("8_6t0f2")
status_logic = NodePath("Logic")
init_states = [NodePath("Idle")]

[node name="Logic" type="Node" parent="StateMachine"]
script = ExtResource("8_wpj8g")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "fire_thrower", "animation_player", "passing_state")]
script = ExtResource("9_ooxju")
character_body = NodePath("../..")
fire_thrower = NodePath("../..")
animation_player = NodePath("../../Flipper/Sprite2D/AnimationPlayer")
passing_state = NodePath("../Passing")

[node name="Passing" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "fire_thrower", "animation_player", "idle_state")]
script = ExtResource("11_w5p4d")
character_body = NodePath("../..")
fire_thrower = NodePath("../..")
animation_player = NodePath("../../Flipper/Sprite2D/AnimationPlayer")
idle_state = NodePath("../Idle")

[node name="SpawningTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Selectable" type="Area2D" parent="." node_paths=PackedStringArray("parent_node")]
position = Vector2(0, -24)
collision_layer = 40
collision_mask = 0
monitoring = false
script = ExtResource("11_80r25")
parent_node = NodePath("..")
is_dash_selectable = false
is_jump_selectable = false
is_dunk_selectable = false
shoot_bell_ratio = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Selectable"]
shape = SubResource("CircleShape2D_4jimj")
debug_color = Color(0.20871, 0.20871, 0.20871, 0.419608)

[connection signal="body_entered" from="Flipper/PlayerDetector" to="." method="_on_player_detector_body_entered"]
